# cowcow

./: .cursorrules  .gitignore  Cargo.toml  DISCUSSION_POST.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  vercel.json
.github/workflows/: ci.yml
.sqlx/: query-092052927a5a453152582197bd99b4056a2cf21b3d4744b8b3f240aa60d45339.json  query-09600c79a893400552dcf2dbe5c890d72acfdb4e1455afb67eb7595eeaf7d9d7.json  query-580848bdb8c66b06494555db03de7a2dd59066e67f504f090f79da00eade07d5.json  query-672d0c4573b6754b13b4f335d79352bfa05e9fc7048d263181fd64bdad6bea71.json
cowcow_cli/: Cargo.toml
cowcow_cli/src/: auth.rs  config.rs  main.rs  upload.rs
cowcow_core/: Cargo.toml
cowcow_core/src/: lib.rs
docs/: DOCKER.md  SETUP.md  TESTING.md  architecture.md  configuration.md  hld.md  lld.md
nginx/: nginx.conf
proto/: reward.proto  upload.proto
scripts/: build.sh  docker-setup.sh  test.sh
server/: .env.example  Dockerfile  auth.py  cowcow_grpc.py  cowcow_pb2.py  database.py  init_db.sql  main.py  models.py  requirements-dev.txt  requirements.txt  reward_pb2.py  reward_pb2_grpc.py  upload_pb2.py  upload_pb2_grpc.py
