[workspace]
members = [
    "cowcow_core",
    "cowcow_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thabhelo Duve"]
license = "Apache-2.0"
repository = "https://github.com/thabhelo/cowcow"
description = "Offline-first speech data collection toolkit for low-resource languages"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
hound = "3.5"
webrtc-vad = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json"] }
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.7", features = ["v4", "serde"] }
dirs = "5.0"
indicatif = "0.17"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_derive = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] } 