[package]
name = "cowcow_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core audio processing library for Cowcow"

[lib]
crate-type = ["rlib"]

[features]
default = []
whisper = ["whisper_cpp_sys"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
cpal.workspace = true
hound.workspace = true
webrtc-vad.workspace = true
sqlx.workspace = true
uuid.workspace = true

[build-dependencies]
whisper_cpp_sys = { version = "0.2", optional = true } 